--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="title">
-        
+        Header logo
+        <ul>
+            <a href="..">header link one</a>
+            <a href="..">header link two</a>
+            <a href="..">header link three</a>
+        </ul>
     </div>
     <div class="header-section">
 
