--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Top Page</title>
 </head>
 <body>
+    <div class="top third">
     <div class="title">
         Header logo
         <ul>
@@ -17,6 +18,7 @@
     </div>
     <div class="header-section">
 
+    </div>
     </div>
     <div class="upper-section">
 
