Add Title and img placeholder for upper section

--- a/index.html
+++ b/index.html
@@ -8,20 +8,29 @@
 </head>
 <body>
     <div class="top third">
-    <div class="title">
-        Header logo
-        <ul>
-            <a href="..">header link one</a>
-            <a href="..">header link two</a>
-            <a href="..">header link three</a>
-        </ul>
-    </div>
-    <div class="header-section">
+        <div class="title">
+                Header logo
+                <ul>
+                    <a href="..">header link one</a>
+                    <a href="..">header link two</a>
+                    <a href="..">header link three</a>
+                </ul>
+        </div>
+        <div class="header-section">
+            <div class="left-header">
 
-    </div>
+            </div>
+            <img src=".." alt="placeholder image">
+        </div>
     </div>
     <div class="upper-section">
-
+            <div>Some random information</div>
+            <div class="boxes">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
     </div>
     <div class="lower-section">
 
