Add Figure for img aswell as quote/credit section
Adding figure lets me directly make subtitles with figcaption

--- a/index.html
+++ b/index.html
@@ -26,13 +26,31 @@
     <div class="upper-section">
             <div>Some random information</div>
             <div class="boxes">
+               <figure>
                 <img src="" alt="">
+                <figcaption>First image</figcaption>
+                </figure> 
+
+                <figure>
                 <img src="" alt="">
+                </figure>
+
+                <figure>
                 <img src="" alt="">
+                </figure>
+
+                <figure>
                 <img src="" alt="">
+                </figure>
             </div>
     </div>
     <div class="lower-section">
+        <div class="Quote">
+
+        </div> <!--use flex start-->
+        <div class="credit">
+
+        </div> <!--use flex end-->
 
     </div>
     <div class="upper-footer">
