Fill upper and lower footer

--- a/index.html
+++ b/index.html
@@ -54,10 +54,16 @@
 
     </div>
     <div class="upper-footer">
-
+        <div class="footer-box">
+            <div class="left-footer">
+                <div>Call to action! It's time!</div>
+                <div>Sign up for the product</div>
+            </div>
+            <button>Sign Up</button>
+        </div>
     </div>
     <div class="lower-footer">
-
+        <div>Copyright Lino Rufaro</div>
     </div>
 </body>
 </html>
