Add figcaption to all figures

--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
 
                 <figure>
                 <img src="" alt="">
+                <figcaption>Second image</figcaption>
                 </figure>
 
                 <figure>
                 <img src="" alt="">
+                <figcaption>Third image</figcaption>
                 </figure>
 
                 <figure>
                 <img src="" alt="">
+                <figcaption> Fourth image</figcaption>
                 </figure>
             </div>
     </div>
