Add Quote and Credit to respective sections

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     </div>
     <div class="lower-section">
         <div class="Quote">
-
+            This is one of the deepest quotes known to man
         </div> <!--use flex start-->
         <div class="credit">
-
+            Seneca Abi
         </div> <!--use flex end-->
 
     </div>
