Add all divs to css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         </div>
         <div class="header-section">
             <div class="left-header">
+                    <div class="header-title">This Website is awesome</div>
 
+                    <div class="header-subtext"> Subtext </div>
+                    <button>Sign up</button>
             </div>
             <img src=".." alt="placeholder image">
         </div>
