Add relevant subsections with notes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="header-title">This Website is awesome</div>
 
                     <div class="header-subtext"> Subtext </div>
-                    <button>Sign up</button>
+                    <button class="header-button">Sign up</button>
             </div>
             <img src=".." alt="placeholder image">
         </div>
@@ -65,7 +65,7 @@
                 <div>Call to action! It's time!</div>
                 <div>Sign up for the product</div>
             </div>
-            <button>Sign Up</button>
+            <button class="footer-button">Sign Up</button>
         </div>
     </div>
     <div class="lower-footer">
