Add div ID for random info in html and css
Allows editing of sections to be stacked above each other, sothat "some random information" can be a title.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="upper-section">
-            <div>Some random information</div>
+            <div id="rndinfo">Some random information</div>
             <div class="boxes">
                <figure>
                 <img src="" alt="">
