Add images to boxes

--- a/index.html
+++ b/index.html
@@ -27,25 +27,27 @@
         </div>
     </div>
     <div class="upper-section">
+
             <div id="rndinfo">Some random information</div>
+
             <div class="boxes">
                <figure>
-                <img src="" alt="">
+                <img src="open-book-icon.svg" alt="">
                 <figcaption>First image</figcaption>
                 </figure> 
 
                 <figure>
-                <img src="" alt="">
+                <img src="open-book-icon.svg" alt="">
                 <figcaption>Second image</figcaption>
                 </figure>
 
                 <figure>
-                <img src="" alt="">
+                <img src="open-book-icon.svg" alt="">
                 <figcaption>Third image</figcaption>
                 </figure>
 
                 <figure>
-                <img src="" alt="">
+                <img src="open-book-icon.svg" alt="">
                 <figcaption> Fourth image</figcaption>
                 </figure>
             </div>
