--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="header-subtext"> Subtext </div>
                     <button class="header-button">Sign up</button>
             </div>
-            <img src="table.webp" alt="placeholder image">
+            <img class="header-image" src="table.webp" alt="placeholder image">
         </div>
     </div>
     <div class="upper-section">
